@@ -1,3 +1,6 @@
+v42:
+- Update fboom.me
+- Update ajax.js
 v41:
 - Update uptobox.com, filefactory.com, hitfile.net, katfile.com
 - Update class.php
